--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,85 +1,88 @@
-.navbar{
+.navbar {
     width: 100%;
     height: 100px;
     background: #21325e;
-}
-
-.links{
+  }
+  
+  .links {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-}
-.navbar a{
+  }
+  
+  .navbar a {
     color: white;
     text-decoration: none;
     margin: 20px;
     font-size: 25px;
-}
-
-.toggle{
+  }
+  
+  .toggle {
     width: 100%;
-    height: 100%;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-}
-.toggle svg{
+  }
+  
+  .toggle svg {
     font-size: 50px;
-
-}
-.toggle button{
+  }
+  .toggle button {
     margin-right: 20px;
     background-color: transparent;
-    border:none;
+    border: none;
+    color: white;
     cursor: pointer;
-}
-
-#open{
+  }
+  
+  #open {
     height: 100vh;
-}
-
-#open .links{
+  }
+  
+  #open .links {
     flex-direction: column;
     justify-content: flex-start;
     margin-top: 100px;
-}
-
-#open a{
+  }
+  
+  #open a {
     width: 100%;
     text-align: center;
-}
-
-@media only screen and (max-width:900px){
-    .navbar a{
-        width:70px;
+  }
+  
+  @media only screen and (max-width: 900px) {
+    .navbar a {
+      width: 70px;
     }
-}
-@media only screen and (max-width:600px){
-    .toogle{
-        display:flex;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .toggle {
+      display: flex;
     }
-    #close a{
-        display: none;
+    #close a {
+      display: none;
     }
-}
-
-@media only screen and (min-width: 600px){
-    .toggle{
-        display: none;
+  }
+  
+  @media only screen and (min-width: 600px) {
+    .toggle {
+      display: none;
     }
-
-    .hiddenLinks{
-        display: none;
+  
+    .hiddenLinks {
+      display: none;
     }
-
-    #open{
-        height: 100px;
+  
+    #open {
+      height: 100px;
     }
-
-    #open .links{
-        flex-direction: row;
+  
+    #open .links {
+      flex-direction: row;
     }
-}
+  }
